tests/parser/invalid/008-for-without-range.man
def main()
    for i in
        foo()
    end
end
